--- a/index.html
+++ b/index.html
@@ -12,38 +12,38 @@
 
   <body>
     <div class="top-container">
-      <img class="top-clown" src="images/cloud.png" alt="">
+      <img class="top-clown" src="images/cloud.svg" alt="">
       <h1>I'm Liraz</h1>
-      <h2>a programmer.</h2>
-      <img class="down-clown" src="images/cloud.png" alt=""><br>
-      <img src="images/mountain.png" alt="">
+      <h2>a <strong>pro</strong>grammer.</h2>
+      <img class="down-clown" src="images/cloud.svg" alt=""><br>
+      <img src="images/land.svg" alt="">
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img class='profile-pic' src="images\lirazcircle.png" alt="">
+        <img class='profile-pic' src="images\liraz.png" alt="">
         <h2>Hello.</h2>
-        <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+        <p class='intro'>I'm a web developer based in Tel-Aviv, Israel.<br> I have a passion for coding and love to create for web and mobile devices.</p>
       </div>
       <hr>
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
           <img class="skills-img" src="images\computer.png" alt="">
-          <h3>Lorem & Ipsum</h3>
-          <p class="pclass">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+          <h3>Coding & More</h3>
+          <p class="pclass">I am addicted to computer and technology, I have experience at  HTML, JS, CSS and more. I also designs with Photoshop CS, Lightroom and  Paint.</p>
         </div>
         <div class="skill-row">
-          <img class="skills-img" src="images\chillies.png" alt="">
-          <h3>Lorem Ipsum Dolor</h3>
-          <p class="pclass">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+          <img class="skills-img2" src="https://cdn-icons-png.flaticon.com/512/5520/5520534.png" alt="">
+          <h3>But my real skiil...</h3>
+          <p class="pclass">Is to eat hummus! I can make the best hummus in the world, and I can eat hummus every time. I have also won 7 different hummus competition and my rank is 'Hummus-Master'.</p>
         </div>
       </div>
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p><br />
-        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        <h3>I’m currently available for freelance work.</h3>
+        <p class="intro">If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p><br />
+        <a class="btn" href="mailto:lirazganon@gmail.com">📧 MESSAGE ME</a>
       </div>
     </div>
     <br />
@@ -53,7 +53,7 @@
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
       <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p class="copyright">© Name Surname.</p>
+      <p class="copyright">© Liraz Ganon @ Hummus Coding.</p>
     </div>
 
 
