Ver 2 some fixed

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
       </div>
       <hr>
       <div class="skills">
-        <h2>My Skills.</h2>
+        <h2 class="h2skill">My Skills.</h2>
         <div class="skill-row">
           <img class="skills-img" src="images\computer.png" alt="">
-          <h3>Coding & More</h3>
+          <h3 class="h3skill">Coding & More</h3>
           <p class="pclass">I am addicted to computer and technology, I have experience at  HTML, JS, CSS and more. I also designs with Photoshop CS, Lightroom and  Paint.</p>
         </div>
         <div class="skill-row">
           <img class="skills-img2" src="https://cdn-icons-png.flaticon.com/512/5520/5520534.png" alt="">
-          <h3>But my real skiil...</h3>
+          <h3 class="h3skill">But my real skill...</h3>
           <p class="pclass">Is to eat hummus! I can make the best hummus in the world, and I can eat hummus every time. I have also won 7 different hummus competition and my rank is 'Hummus-Master'.</p>
         </div>
       </div>
