--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="skill-row">
           <img class="skills-img2" src="https://cdn-icons-png.flaticon.com/512/5520/5520534.png" alt="">
           <h3 class="h3skill">But my real skill...</h3>
-          <p class="pclass">Is to eat hummus! I can make the best hummus in the world, and I can eat hummus every time. I have also won 7 different hummus competition and my rank is 'Hummus-Master'.</p>
+          <p class="pclass">Is to eat hummus! I can make the best hummus in the world, and I can eat hummus all day! I have also won 7 different hummus competition and my rank is 'Hummus-Master'.</p>
         </div>
       </div>
       <hr>
