--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Liraz Ganon Dev</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="icon" href="css/favicon.ico">
     <link rel="stylesheet" href="css/styles.css">
 
@@ -10,13 +11,39 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Source+Sans+3:wght@300&family=Square+Peg&display=swap" rel="stylesheet">
 
+<script src="https://kit.fontawesome.com/c1a9d640c4.js" crossorigin="anonymous"></script>
+
   <body>
     <div class="top-container">
+
+      <nav class="navbar sticky-top navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
       <img class="top-clown" src="images/cloud.svg" alt="">
       <h1>I'm Liraz</h1>
       <h2>a <strong>pro</strong>grammer.</h2>
       <img class="down-clown" src="images/cloud.svg" alt=""><br>
-      <img src="images/land.svg" alt="">
+      <img class="land-img" src="images/land.svg" alt="">
     </div>
     <div class="middle-container">
       <div class="profile">
@@ -35,7 +62,7 @@
         <div class="skill-row">
           <img class="skills-img2" src="https://cdn-icons-png.flaticon.com/512/5520/5520534.png" alt="">
           <h3 class="h3skill">But my real skill...</h3>
-          <p class="pclass">Is to eat hummus! I can make the best hummus in the world, and I can eat hummus all day! I have also won 7 different hummus competition and my rank is 'Hummus-Master'.</p>
+          <p class="pclass">Is to eat hummus! I can make the best hummus in the world, and I can eat hummus every time. I have also won 7 different hummus competition and my rank is 'Hummus-Master'.</p>
         </div>
       </div>
       <hr>
@@ -43,7 +70,7 @@
         <h2>Get In Touch</h2>
         <h3>I’m currently available for freelance work.</h3>
         <p class="intro">If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p><br />
-        <a class="btn" href="mailto:lirazganon@gmail.com">📧 MESSAGE ME</a>
+        <a class="btn" href="mailto:lirazganon@gmail.com"><i class="fa-regular fa-envelope"></i>  MESSAGE ME</a>
       </div>
     </div>
     <br />
