responsability update for mobile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="top-container">
 
       <nav class="navbar sticky-top navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">{LG}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -41,7 +41,7 @@
 
       <img class="top-clown" src="images/cloud.svg" alt="">
       <h1>I'm Liraz</h1>
-      <h2>a <strong>pro</strong>grammer.</h2>
+      <h2 class="h2-title">a <strong>pro</strong>grammer.</h2>
       <img class="down-clown" src="images/cloud.svg" alt=""><br>
       <img class="land-img" src="images/land.svg" alt="">
     </div>
